@@ -36,12 +36,12 @@
  */
 struct TAG_transinstr;
 
-#define TOTAL_KEYWORDS 91
+#define TOTAL_KEYWORDS 93
 #define MIN_WORD_LENGTH 1
 #define MAX_WORD_LENGTH 15
-#define MIN_HASH_VALUE 2
-#define MAX_HASH_VALUE 228
-/* maximum key range = 227, duplicates = 0 */
+#define MIN_HASH_VALUE 1
+#define MAX_HASH_VALUE 190
+/* maximum key range = 190, duplicates = 0 */
 
 #ifdef __GNUC__
 __inline
@@ -55,32 +55,32 @@ hash (register const char *str, register unsigned int len)
 {
   static const unsigned char asso_values[] =
     {
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229,   5, 229,
-        5, 229, 229, 229,   0, 229,   0, 229, 229, 229,
-      229, 229, 229, 229, 229,  25,  45,  25,   0,   0,
-       45,  65, 229,   5,  50,   5,  40,   0,  45,  40,
-        0,   0,  95,  10,   5,  35,  65,  70, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229, 229, 229, 229, 229,
-      229, 229, 229, 229, 229, 229
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191,  25, 191,
+       10, 191, 191, 191,   0, 191,  55, 191, 191, 191,
+      191, 191, 191, 191, 191,  35,  40,   0,  10,  35,
+       30,  55, 191,  15,   0,  30,  25,   0,  55,  90,
+        0,  55,  40,  10,   5,  55,  55,  70, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191, 191, 191, 191, 191,
+      191, 191, 191, 191, 191, 191
     };
   register int hval = len;
 
@@ -107,136 +107,126 @@ hash (register const char *str, register unsigned int len)
 static const struct TAG_transinstr wordlist[] =
   {
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"EQ",		INS_SECONDARY,	I_EQ,		NULL},
+    {"J",		INS_PRIMARY, 	I_J,		NULL},
+    {"CJ",		INS_PRIMARY,	I_CJ,		NULL},
     {"POP",		INS_SECONDARY,	I_POP,		NULL},
-    {"ENDP",		INS_SECONDARY,	I_ENDP,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"MRELEASE",	INS_SECONDARY,	I_MRELEASE,	NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"SUM",		INS_SECONDARY,	I_SUM,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"MWDIS",		INS_SECONDARY,	I_MWDIS,	NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"ST",		INS_OTHER,	I_ST,		NULL},
+    {"MWS_SYNC",	INS_SECONDARY,	I_MWS_SYNC,	NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"DIST",		INS_SECONDARY,	I_DIST,		NULL},
-    {"MWS_ALTEND",	INS_SECONDARY,	I_MWS_ALTEND,	NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"MWS_ALT",	INS_SECONDARY,	I_MWS_ALT,	NULL},
     {"MWTALTWT",	INS_SECONDARY,	I_MWTALTWT,	NULL},
+    {"DISC",		INS_SECONDARY,	I_DISC,		NULL},
+    {"MWDIS",		INS_SECONDARY,	I_MWDIS,	NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"MWS_DIS",	INS_SECONDARY,	I_MWS_DIS,	NULL},
+    {"LDC",		INS_PRIMARY,	I_LDC,		NULL},
+    {"DIST",		INS_SECONDARY,	I_DIST,		NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"MALLOC",		INS_SECONDARY,	I_MALLOC,	NULL},
+    {"LT",		INS_SECONDARY,	I_LT,		NULL},
+    {"MWS_PBADJSYNC",	INS_SECONDARY,	I_MWS_PBADJSYNC,NULL},
     {"DISS",		INS_SECONDARY,	I_DISS,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"SETPRI",		INS_SECONDARY,	I_SETPRI,	NULL},
-    {"MWS_DIS",	INS_SECONDARY,	I_MWS_DIS,	NULL},
-    {"ADD",		INS_SECONDARY,	I_ADD,		NULL},
+    {"LD",		INS_OTHER,	I_LD,		NULL},
+    {"ADC",		INS_PRIMARY,	I_ADC,		NULL},
     {"MWS_BINIT",	INS_SECONDARY,	I_MWS_BINIT,	NULL},
-    {"MWS_ALTPOSTLOCK",INS_SECONDARY,	I_MWS_ALTPOSTLOCK,NULL},
-    {"MWS_PBRILNK",	INS_SECONDARY,	I_MWS_PBRILNK,	NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"TALTWT",		INS_SECONDARY,	I_TALTWT,	NULL},
     {"MTCLONE",	INS_SECONDARY,	I_MTCLONE,	NULL},
-    {"MWALTEND",	INS_SECONDARY,	I_MWALTEND,	NULL},
+    {"REM",		INS_SECONDARY,	I_REM,		NULL},
     {"TRAP",		INS_SECONDARY,	I_TRAP,		NULL},
     {"MWALT",		INS_SECONDARY,	I_MWALT,	NULL},
-    {"ALTEND",		INS_SECONDARY,	I_ALTEND,	NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"MWALTWT",	INS_SECONDARY,	I_MWALTWT,	NULL},
     {"ALT",		INS_SECONDARY,	I_ALT,		NULL},
-    {"DISC",		INS_SECONDARY,	I_DISC,		NULL},
+    {"ENDP",		INS_SECONDARY,	I_ENDP,		NULL},
     {"ALTWT",		INS_SECONDARY,	I_ALTWT,	NULL},
     {"STARTP",		INS_SECONDARY,	I_STARTP,	NULL},
-    {"LD",		INS_OTHER,	I_LD,		NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"PROD",		INS_SECONDARY,	I_PROD,		NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"LT",		INS_SECONDARY,	I_LT,		NULL},
-    {"MWS_PBADJSYNC",	INS_SECONDARY,	I_MWS_PBADJSYNC,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"MWENB",		INS_SECONDARY,	I_MWENB,	NULL},
-    {"MTFREE",		INS_SECONDARY,	I_MTFREE,	NULL},
-    {"IN",		INS_SECONDARY,	I_IN,		NULL},
-    {"OUT",		INS_SECONDARY,	I_OUT,		NULL},
-    {"ENBT",		INS_SECONDARY,	I_ENBT,		NULL},
-    {"STOPP",		INS_SECONDARY,	I_STOPP,	NULL},
-    {"TALTWT",		INS_SECONDARY,	I_TALTWT,	NULL},
     {"SB",		INS_SECONDARY,	I_SB,		NULL},
-    {"NOT",		INS_SECONDARY,	I_NOT,		NULL},
-    {"ENBS",		INS_SECONDARY,	I_ENBS,		NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"MWS_PBRULNK",	INS_SECONDARY,	I_MWS_PBRULNK,	NULL},
-    {"MWS_ENB",	INS_SECONDARY,	I_MWS_ENB,	NULL},
-    {"MWS_ALTUNLOCK",	INS_SECONDARY,	I_MWS_ALTUNLOCK,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"MWS_PPILNK",	INS_SECONDARY,	I_MWS_PPILNK,	NULL},
-    {"MWS_ALTLOCK",	INS_SECONDARY,	I_MWS_ALTLOCK,	NULL},
-    {"MWS_PBRESIGN",	INS_SECONDARY,	I_MWS_PBRESIGN,	NULL},
-    {"MWS_SYNC",	INS_SECONDARY,	I_MWS_SYNC,	NULL},
-    {"MOVE",		INS_SECONDARY,	I_MOVE,		NULL},
-    {"CSUB0",		INS_SECONDARY,	I_CSUB0,	NULL},
-    {"MALLOC",		INS_SECONDARY,	I_MALLOC,	NULL},
-    {"GT",		INS_SECONDARY,	I_GT,		NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"ENBC",		INS_SECONDARY,	I_ENBC,		NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"CJ",		INS_PRIMARY,	I_CJ,		NULL},
-    {"ADC",		INS_PRIMARY,	I_ADC,		NULL},
-    {"IOW8",		INS_SECONDARY,	I_IOW8,		NULL},
-    {"IOW16",		INS_SECONDARY,	I_IOW16,	NULL},
-    {"GETPRI",		INS_SECONDARY,	I_GETPRI,	NULL},
-    {"SW",		INS_SECONDARY,	I_SW,		NULL},
     {"MUL",		INS_SECONDARY,	I_MUL,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"IOW32",		INS_SECONDARY,	I_IOW32,	NULL},
+    {"MWS_ALTPOSTLOCK",INS_SECONDARY,	I_MWS_ALTPOSTLOCK,NULL},
+    {"ALTEND",		INS_SECONDARY,	I_ALTEND,	NULL},
+    {"MWS_ENB",	INS_SECONDARY,	I_MWS_ENB,	NULL},
+    {"ADD",		INS_SECONDARY,	I_ADD,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"LB",		INS_SECONDARY,	I_LB,		NULL},
-    {"FBARINIT",	INS_SECONDARY,	I_FBARINIT,	NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"MWS_PPPAROF",	INS_SECONDARY,	I_MWS_PPPAROF,	NULL},
-    {"MWS_PPBASEOF",	INS_SECONDARY,	I_MWS_PPBASEOF,	NULL},
-    {"LDC",		INS_PRIMARY,	I_LDC,		NULL},
-    {"DIFF",		INS_SECONDARY,	I_DIFF,		NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"REM",		INS_SECONDARY,	I_REM,		NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"BOOLINVERT",	INS_SECONDARY,	I_BOOLINVERT,	NULL},
-    {"J",		INS_PRIMARY, 	I_J,		NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"SUB",		INS_SECONDARY,	I_SUB,		NULL},
-    {"IOR8",		INS_SECONDARY,	I_IOR8,		NULL},
     {"IOR16",		INS_SECONDARY,	I_IOR16,	NULL},
+    {"SETERR",		INS_SECONDARY,	I_SETERR,	NULL},
+    {"GT",		INS_SECONDARY,	I_GT,		NULL},
+    {"MWALTEND",	INS_SECONDARY,	I_MWALTEND,	NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"MWS_PBENROLL",	INS_SECONDARY,	I_MWS_PBENROLL,	NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"MWS_ALTEND",	INS_SECONDARY,	I_MWS_ALTEND,	NULL},
+    {"MWS_PBRILNK",	INS_SECONDARY,	I_MWS_PBRILNK,	NULL},
+    {"LB",		INS_SECONDARY,	I_LB,		NULL},
+    {"NOT",		INS_SECONDARY,	I_NOT,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"IOR32",		INS_SECONDARY,	I_IOR32,	NULL},
+    {"MTFREE",		INS_SECONDARY,	I_MTFREE,	NULL},
+    {"IN",		INS_SECONDARY,	I_IN,		NULL},
+    {"FBARSYNC",	INS_SECONDARY,	I_FBARSYNC,	NULL},
+    {"DIFF",		INS_SECONDARY,	I_DIFF,		NULL},
+    {"MWS_PPILNK",	INS_SECONDARY,	I_MWS_PPILNK,	NULL},
+    {"MWS_ALTLOCK",	INS_SECONDARY,	I_MWS_ALTLOCK,	NULL},
+    {"LDTIMER",	INS_SECONDARY,	I_LDTIMER,	NULL},
+    {"LDL",		INS_PRIMARY,	I_LDL,		NULL},
+    {"ENBC",		INS_SECONDARY,	I_ENBC,		NULL},
+    {"MWENB",		INS_SECONDARY,	I_MWENB,	NULL},
+    {"GETPRI",		INS_SECONDARY,	I_GETPRI,	NULL},
+    {"SW",		INS_SECONDARY,	I_SW,		NULL},
+    {"FBARINIT",	INS_SECONDARY,	I_FBARINIT,	NULL},
+    {"ENBT",		INS_SECONDARY,	I_ENBT,		NULL},
+    {"CSUB0",		INS_SECONDARY,	I_CSUB0,	NULL},
+    {"MWS_PPPAROF",	INS_SECONDARY,	I_MWS_PPPAROF,	NULL},
+    {"MWS_PPBASEOF",	INS_SECONDARY,	I_MWS_PPBASEOF,	NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"ENBS",		INS_SECONDARY,	I_ENBS,		NULL},
+    {"IOW16",		INS_SECONDARY,	I_IOW16,	NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"EQ",		INS_SECONDARY,	I_EQ,		NULL},
+    {"SUB",		INS_SECONDARY,	I_SUB,		NULL},
+    {"MOVE",		INS_SECONDARY,	I_MOVE,		NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"LW",		INS_SECONDARY,	I_LW,		NULL},
+    {"IOR",		INS_SECONDARY,	I_IOR,		NULL},
+    {"RUNP",		INS_SECONDARY,	I_RUNP,		NULL},
+    {"IOW32",		INS_SECONDARY,	I_IOW32,	NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"MWS_PBENROLL",	INS_SECONDARY,	I_MWS_PBENROLL,	NULL},
+    {"OUT",		INS_SECONDARY,	I_OUT,		NULL},
+    {"PROD",		INS_SECONDARY,	I_PROD,		NULL},
+    {"STOPP",		INS_SECONDARY,	I_STOPP,	NULL},
+    {"MWS_PBRULNK",	INS_SECONDARY,	I_MWS_PBRULNK,	NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"SETERR",		INS_SECONDARY,	I_SETERR,	NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"MTNEW",		INS_SECONDARY,	I_MTNEW,	NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"LDL",		INS_PRIMARY,	I_LDL,		NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"FBARSYNC",	INS_SECONDARY,	I_FBARSYNC,	NULL},
+    {"MWS_ALTUNLOCK",	INS_SECONDARY,	I_MWS_ALTUNLOCK,NULL},
     {"NULL",		INS_SECONDARY,	I_NULL,		NULL},
-    {"FBARRESIGN",	INS_SECONDARY,	I_FBARRESIGN,	NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"MWS_PBRESIGN",	INS_SECONDARY,	I_MWS_PBRESIGN,	NULL},
+    {"MRELEASE",	INS_SECONDARY,	I_MRELEASE,	NULL},
+    {"IOR8",		INS_SECONDARY,	I_IOR8,		NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"TIN",		INS_SECONDARY,	I_TIN,		NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"DIV",		INS_SECONDARY,	I_DIV,		NULL},
@@ -246,35 +236,35 @@ static const struct TAG_transinstr wordlist[] =
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"MTNEW",		INS_SECONDARY,	I_MTNEW,	NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"RUNP",		INS_SECONDARY,	I_RUNP,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"IOW",		INS_SECONDARY,	I_IOW,		NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"IOW8",		INS_SECONDARY,	I_IOW8,		NULL},
+    {"FBARRESIGN",	INS_SECONDARY,	I_FBARRESIGN,	NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {"RESCHEDULE",	INS_SECONDARY,	I_RESCHEDULE,	NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"REV",		INS_SECONDARY,	I_REV,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"FBARENROLL",	INS_SECONDARY,	I_FBARENROLL,	NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"IOW",		INS_SECONDARY,	I_IOW,		NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
@@ -296,16 +286,7 @@ static const struct TAG_transinstr wordlist[] =
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"IOR",		INS_SECONDARY,	I_IOR,		NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
+    {"BOOLINVERT",	INS_SECONDARY,	I_BOOLINVERT,	NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
@@ -315,26 +296,7 @@ static const struct TAG_transinstr wordlist[] =
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
     {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {(char*)0,INS_INVALID,I_INVALID,NULL},
-    {"REV",		INS_SECONDARY,	I_REV,		NULL}
+    {"FBARENROLL",	INS_SECONDARY,	I_FBARENROLL,	NULL}
   };
 
 #ifdef __GNUC__
