@@ -106,5 +106,7 @@ IOW16,		INS_SECONDARY,	I_IOW16,	NULL
 IOR32,		INS_SECONDARY,	I_IOR32,	NULL
 IOW32,		INS_SECONDARY,	I_IOW32,	NULL
 CSUB0,		INS_SECONDARY,	I_CSUB0,	NULL
+LDTIMER,	INS_SECONDARY,	I_LDTIMER,	NULL
+TIN,		INS_SECONDARY,	I_TIN,		NULL
 %%
 
